WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153604
Modern IDB: SQLite backend doesn't support deleting ranges with more than one key.
https://bugs.webkit.org/show_bug.cgi?id=153604
Summary
Modern IDB: SQLite backend doesn't support deleting ranges with more than one...
Brady Eidson
Reported
2016-01-28 11:05:01 PST
Modern IDB: SQLite backend doesn't support deleting ranges with more than one key.
Attachments
Patch v1
(4.27 KB, patch)
2016-01-28 11:28 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-01-28 11:28:04 PST
Created
attachment 270131
[details]
Patch v1
WebKit Commit Bot
Comment 2
2016-01-28 14:40:10 PST
Comment on
attachment 270131
[details]
Patch v1 Clearing flags on attachment: 270131 Committed
r195783
: <
http://trac.webkit.org/changeset/195783
>
WebKit Commit Bot
Comment 3
2016-01-28 14:40:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug