Modern IDB: SQLite backend doesn't support deleting ranges with more than one key. https://bugs.webkit.org/show_bug.cgi?id=153604

Reviewed by Andy Estes.

Source/WebCore:

No new tests (A few failing tests pass, a few get closer).

* Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::SQLiteIDBBackingStore::deleteRange):

LayoutTests:

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/171689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195783 268f45cc-cd09-0410-ab3c-d52691b4dbfc